[gd_scene load_steps=4 format=3 uid="uid://dh8qxqnc414xw"]

[ext_resource type="Script" path="res://levels/debug_helpers/demo_overlay_line_3d.gd" id="1_cepvc"]

[sub_resource type="SphereMesh" id="SphereMesh_lnbbj"]

[sub_resource type="SphereMesh" id="SphereMesh_avwm1"]

[node name="demo_overlay_line3d" type="Node3D"]
script = ExtResource("1_cepvc")

[node name="ui" type="CanvasLayer" parent="."]

[node name="expanel" type="ExpandablePanel" parent="ui"]
current_page = 0
__expanded_width = 256
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2

[node name="settings" type="VBoxContainer" parent="ui/expanel"]
layout_mode = 2
metadata/_page_name = "OverlayInfo"

[node name="lbl_title" type="Label" parent="ui/expanel/settings"]
layout_mode = 2
text = "OverlayInfo"
horizontal_alignment = 1

[node name="chk_overlay" type="CheckBox" parent="ui/expanel/settings"]
layout_mode = 2
button_pressed = true
text = "Show Overlay
"

[node name="chk_nontimed" type="CheckBox" parent="ui/expanel/settings"]
layout_mode = 2
button_pressed = true
text = "Non timed labels"

[node name="spacer1" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="lbl_valign" type="Label" parent="ui/expanel/settings"]
layout_mode = 2
text = "Vertical alignment"

[node name="hbox_valign" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="bt_top" type="Button" parent="ui/expanel/settings/hbox_valign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Top"

[node name="bt_center" type="Button" parent="ui/expanel/settings/hbox_valign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Center"

[node name="bt_bottom" type="Button" parent="ui/expanel/settings/hbox_valign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Bottom"

[node name="spacer2" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="lbl_halign" type="Label" parent="ui/expanel/settings"]
layout_mode = 2
text = "Horizontal alignment"

[node name="hbox_halign" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="bt_left" type="Button" parent="ui/expanel/settings/hbox_halign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Left"

[node name="bt_center" type="Button" parent="ui/expanel/settings/hbox_halign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Center"

[node name="bt_right" type="Button" parent="ui/expanel/settings/hbox_halign"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Right"

[node name="spacer3" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="lbl_templabels" type="Label" parent="ui/expanel/settings"]
layout_mode = 2
text = "Temporary labels"

[node name="hbox_tmplbl" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="bt_gdversion" type="Button" parent="ui/expanel/settings/hbox_tmplbl"]
layout_mode = 2
size_flags_horizontal = 3
text = "GDVersion"

[node name="bt_randomnum" type="Button" parent="ui/expanel/settings/hbox_tmplbl"]
layout_mode = 2
size_flags_horizontal = 3
text = "RND Num
"

[node name="hbox_duration" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="lbl_dur" type="Label" parent="ui/expanel/settings/hbox_duration"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duration"

[node name="sp_lblduration" type="SpinSlider" parent="ui/expanel/settings/hbox_duration"]
suffix = " sec"
step = 0.1
no_spin_with_slider = true
range_use_min_value = true
range_min_value = 0.2
range_use_max_value = true
range_max_value = 10.0
value = 2.0
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="spacer4" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="lbl_line3d" type="Label" parent="ui/expanel/settings"]
layout_mode = 2
text = "Line3D"
horizontal_alignment = 1

[node name="hbox_speed" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="lbl_spherespeed" type="Label" parent="ui/expanel/settings/hbox_speed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation speed"

[node name="sp_spherespeed" type="SpinSlider" parent="ui/expanel/settings/hbox_speed"]
step = 0.01
no_spin_with_slider = true
range_use_min_value = true
range_min_value = 0.5
range_use_max_value = true
range_max_value = 10.0
value = 1.5
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="spacer5" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="hbox_lineduration" type="HBoxContainer" parent="ui/expanel/settings"]
layout_mode = 2

[node name="lbl_lineduration" type="Label" parent="ui/expanel/settings/hbox_lineduration"]
layout_mode = 2
size_flags_horizontal = 3
text = "Line duration"

[node name="sp_lineduration" type="SpinSlider" parent="ui/expanel/settings/hbox_lineduration"]
suffix = "sec"
step = 0.1
no_spin_with_slider = true
range_use_min_value = true
range_min_value = 0.1
range_use_max_value = true
range_max_value = 5.0
value = 1.5
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="chk_line3d_enabled" type="CheckBox" parent="ui/expanel/settings"]
layout_mode = 2
button_pressed = true
text = "Enabled"

[node name="spacer_final" type="Control" parent="ui/expanel/settings"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 3

[node name="bt_back" type="Button" parent="ui/expanel/settings"]
layout_mode = 2
text = "Back"

[node name="light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 8, 0)

[node name="cam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 6)
current = true

[node name="pivot1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="point" type="MeshInstance3D" parent="pivot1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
mesh = SubResource("SphereMesh_lnbbj")
skeleton = NodePath("../..")

[node name="pivot2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="point" type="MeshInstance3D" parent="pivot2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
mesh = SubResource("SphereMesh_avwm1")
skeleton = NodePath("../..")

[connection signal="toggled" from="ui/expanel/settings/chk_overlay" to="." method="_on_chk_overlay_toggled"]
[connection signal="toggled" from="ui/expanel/settings/chk_nontimed" to="." method="_on_chk_nontimed_toggled"]
[connection signal="toggled" from="ui/expanel/settings/hbox_valign/bt_top" to="." method="_on_bt_top_toggledv"]
[connection signal="toggled" from="ui/expanel/settings/hbox_valign/bt_center" to="." method="_on_bt_center_toggledv"]
[connection signal="toggled" from="ui/expanel/settings/hbox_valign/bt_bottom" to="." method="_on_bt_bottom_toggledv"]
[connection signal="toggled" from="ui/expanel/settings/hbox_halign/bt_left" to="." method="_on_bt_left_toggledh"]
[connection signal="toggled" from="ui/expanel/settings/hbox_halign/bt_center" to="." method="_on_bt_center_toggledh"]
[connection signal="toggled" from="ui/expanel/settings/hbox_halign/bt_right" to="." method="_on_bt_right_toggledh"]
[connection signal="pressed" from="ui/expanel/settings/hbox_tmplbl/bt_gdversion" to="." method="_on_bt_gdversion_pressed"]
[connection signal="pressed" from="ui/expanel/settings/hbox_tmplbl/bt_randomnum" to="." method="_on_bt_randomnum_pressed"]
[connection signal="toggled" from="ui/expanel/settings/chk_line3d_enabled" to="." method="_on_chk_line_3d_enabled_toggled"]
[connection signal="pressed" from="ui/expanel/settings/bt_back" to="." method="_on_bt_back_pressed"]
